# automata-tools-wrappers

./: automata-tools-wrappers.cabal  stack.yaml
src/lib/: Utils.hs
src/lib/Spot/: Autfilt.hs  LTL2TGBA.hs  Randaut.hs  autfilt.help  ltl2tgba.help  randaut.help
src/test/: LTL2TGBATest.hs  Test.hs
